--- a/03_HTML5_CSS3_parte03/aulas/contato.html
+++ b/03_HTML5_CSS3_parte03/aulas/contato.html
@@ -21,6 +21,20 @@
 			</h1>
 		</div>
 	</header>
+	<main>
+		<form>
+			<label for="nome-sobrenome">Nome e sobrenome</label>
+			<input type="text" id="nome-sobrenome">
+
+			<label for="email">Email</label>
+			<input type="text" id="email">
+
+			<label for="telefone">Telefone</label>
+			<input type="text" id="telefone">
+
+			<input type="submit" value="Enviar formlário">
+		</form>
+	</main>
 	<footer>
 		<img src="images/logo-branco.png" alt="Logo Alura">
 		<p class="copyright">&copy;copyright 2020 | Barbearia Alura</p>
