--- a/03_HTML5_CSS3_parte03/aulas/contato.html
+++ b/03_HTML5_CSS3_parte03/aulas/contato.html
@@ -24,13 +24,44 @@
 	<main>
 		<form>
 			<label for="nome-sobrenome">Nome e sobrenome</label>
-			<input type="text" id="nome-sobrenome">
+			<input type="text" id="nome-sobrenome" class="input-padrao">
 
 			<label for="email">Email</label>
-			<input type="text" id="email">
+			<input type="text" id="email" class="input-padrao">
 
 			<label for="telefone">Telefone</label>
-			<input type="text" id="telefone">
+			<input type="text" id="telefone" class="input-padrao">
+			
+			<label for="mensagem">Mensagem</label>
+			<textarea name="" id="mensagem" cols="70" rows="10" class="input-padrao"></textarea>
+
+			<div>
+				<p>Como prefere o nosso contato?</p>
+
+				<label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
+
+				<label for="telefonee"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
+
+				<label for="whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">whatsapp</label>
+			</div>
+
+			<div>
+				<p>Qual hórario prefere ser atendido</p>
+
+				<select name="" id="">
+					<option value="">Manhã</option>
+					<option value="">Tarde</option>
+					<option value="">Noite</option>
+				</select>
+			</div>
+
+			<div>
+				<label for="checkbox" class="checkbox">
+					<input type="checkbox">
+					Gostaria de receber nossas novidades por e-mail?
+				</label>
+				
+			</div>
 
 			<input type="submit" value="Enviar formlário">
 		</form>
