--- a/03_HTML5_CSS3_parte03/aulas/contato.html
+++ b/03_HTML5_CSS3_parte03/aulas/contato.html
@@ -23,45 +23,47 @@
 	</header>
 	<main>
 		<form>
-			<label for="nome-sobrenome">Nome e sobrenome</label>
-			<input type="text" id="nome-sobrenome" class="input-padrao">
+			<fieldset>
+				<label for="nome-sobrenome">Nome e sobrenome</label>
+				<input type="text" id="nome-sobrenome" class="input-padrao" required>
 
-			<label for="email">Email</label>
-			<input type="text" id="email" class="input-padrao">
+				<label for="email">Email</label>
+				<input type="text" id="email" class="input-padrao" placeholder="seu-email@dominio.com" required>
 
-			<label for="telefone">Telefone</label>
-			<input type="text" id="telefone" class="input-padrao">
-			
-			<label for="mensagem">Mensagem</label>
-			<textarea name="" id="mensagem" cols="70" rows="10" class="input-padrao"></textarea>
+				<label for="telefone">Telefone</label>
+				<input type="text" id="telefone" class="input-padrao" placeholder="(XX) XXXXX-XXXX" required>
+				
+				<label for="mensagem">Mensagem</label>
+				<textarea name="" id="mensagem" cols="70" rows="10" class="input-padrao"></textarea>
+			</fieldset>
 
-			<div>
-				<p>Como prefere o nosso contato?</p>
+			<fieldset>
+				<legend>Como prefere o nosso contato?</legend>
 
-				<label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
+				<label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">email</label>
 
-				<label for="telefonee"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
+				<label for="telefonee"><input type="radio" name="contato" value="telefone" id="radio-telefone">telefone</label>
 
-				<label for="whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">whatsapp</label>
-			</div>
+				<label for="whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>whatsapp</label>
+			</fieldset>
 
-			<div>
-				<p>Qual hórario prefere ser atendido</p>
+			<fieldset>
+				</egend>Qual hórario prefere ser atendido</legend>
 
 				<select name="" id="">
 					<option value="">Manhã</option>
 					<option value="">Tarde</option>
 					<option value="">Noite</option>
 				</select>
-			</div>
+			</fieldset>
 
-			<div>
+			<fieldset>
 				<label for="checkbox" class="checkbox">
-					<input type="checkbox">
+					<input type="checkbox" checked>
 					Gostaria de receber nossas novidades por e-mail?
 				</label>
 				
-			</div>
+			</fieldset>
 
 			<input type="submit" value="Enviar formlário">
 		</form>
