propriedades CSS transition, transform, cursor

--- a/03_HTML5_CSS3_parte03/aulas/contato.html
+++ b/03_HTML5_CSS3_parte03/aulas/contato.html
@@ -65,7 +65,7 @@
 				
 			</fieldset>
 
-			<input type="submit" value="Enviar formlário">
+			<input type="submit" value="Enviar formlário" class="enviar">
 		</form>
 	</main>
 	<footer>
