--- a/03_HTML5_CSS3_parte03/aulas/contato.html
+++ b/03_HTML5_CSS3_parte03/aulas/contato.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<div class="caixa">
+		<div class="box">
 			<h1>
 				<img src="images/logo.png" alt="logo Barbearia Alura">
 				<nav>
