eventos de com a funcao on(), evento de click e input, fazendo a contagem de caracteres e palavras.

--- a/06_jQuery_parte01/aulas/alura-typer/public/principal.html
+++ b/06_jQuery_parte01/aulas/alura-typer/public/principal.html
@@ -6,11 +6,17 @@
 </head>
 <body>
     <h1>Alura Typer</h1>
-    <p class="frase">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sequi sint maiores voluptate recusandae placeat quo natus odio rem qui!</p>
+    <p class="frase" id="frase">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sequi sint maiores voluptate recusandae placeat quo natus odio rem qui!</p>
 
     <ul class="informacoes">
     	<li><span id="tamanho-frase">19</span> palavras</li>
     	<li>15 segundos</li>
+    </ul>
+
+    <textarea cols="40" rows="8" class="campo-digitacao" id="campo-digitacao"></textarea>
+    <ul>
+    	<li><span id="contador-caracteres">0</span> caracteres</li>
+    	<li><span id="contador-palavras">0</span> palavras</span></li>
     </ul>
 
     <script src="js/jquery.js"></script>
