--- a/06_jQuery_parte01/aulas/alura-typer/public/principal.html
+++ b/06_jQuery_parte01/aulas/alura-typer/public/principal.html
@@ -10,7 +10,7 @@
 
     <ul class="informacoes">
     	<li><span id="tamanho-frase">19</span> palavras</li>
-    	<li>15 segundos</li>
+    	<li><span id="tempo-digitacao">10</span> segundos</li>
     </ul>
 
     <textarea cols="40" rows="8" class="campo-digitacao" id="campo-digitacao"></textarea>
