--- a/06_jQuery_parte01/aulas/alura-typer/public/principal.html
+++ b/06_jQuery_parte01/aulas/alura-typer/public/principal.html
@@ -10,10 +10,13 @@
 
     <ul class="informacoes">
     	<li><span id="tamanho-frase">19</span> palavras</li>
-    	<li><span id="tempo-digitacao">10</span> segundos</li>
+    	<li><span id="tempo-digitacao">3</span> segundos</li>
     </ul>
 
     <textarea cols="40" rows="8" class="campo-digitacao" id="campo-digitacao"></textarea>
+
+    <button id="botao-reiniciar">Reiniciar Jogo</button>
+
     <ul>
     	<li><span id="contador-caracteres">0</span> caracteres</li>
     	<li><span id="contador-palavras">0</span> palavras</span></li>
