--- a/06_jQuery_parte01/aulas/alura-typer/public/principal.html
+++ b/06_jQuery_parte01/aulas/alura-typer/public/principal.html
@@ -36,6 +36,25 @@
 
 	</div>
 
+	<section class="placar" id="placar">
+		<h3 class="center"></h3>
+		<table class="centered bordered">
+			<thead>
+				<tr>
+					<th>Usuário</th>
+					<th>No. de palavras</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Usuario</td>
+					<td>99</td>
+				</tr>
+			</tbody>
+		</table>
+
+	</section>
+
 	<script src="js/jquery.js"></script>
 	<script src="js/main.js"></script>
 </body>
