prevenir comportamentos event.preventDefault(), .remove(), .parent(), criar elementos com jQuery

--- a/06_jQuery_parte01/aulas/alura-typer/public/principal.html
+++ b/06_jQuery_parte01/aulas/alura-typer/public/principal.html
@@ -49,6 +49,11 @@
 				<tr>
 					<td>Usuario</td>
 					<td>99</td>
+					<td>
+						<a href="#" class="botao-remover">
+							<i class="small material-icons">delete</i>
+						</a>
+				</td>
 				</tr>
 			</tbody>
 		</table>
