exibir e ocultar elementos com show(), hide(), toggle(), slideDown(), slideUp(), slideToggle()

--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -24,10 +24,17 @@
 		</ul>
 
 		<textarea cols="40" rows="8" class="campo-digitacao" id="campo-digitacao"></textarea>
+	
+		<div>
+			<a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
+				<i class="material-icons">restore</i>
+			</a>
 
-		<a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
-			<i class="material-icons">restore</i>
-		</a>
+			<a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
+				<i class="material-icons">assignment</i>
+			</a>
+		</div>
+		
 
 		<ul class="informacoes center">
 			<li><span id="contador-caracteres">0</span> caracteres</li>
@@ -62,5 +69,6 @@
 
 	<script src="js/jquery.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/placar.js"></script>
 </body>
 </html>
