--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -33,6 +33,10 @@
 			<a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
 				<i class="material-icons">assignment</i>
 			</a>
+
+			<a id="botao-frase" class="btn-floating btn-large waves-light waves-effect blue">
+				<i class="material-icons">shuffle</i>
+			</a>
 		</div>
 		
 
@@ -70,5 +74,6 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/placar.js"></script>
+	<script src="js/frase.js"></script>
 </body>
 </html>
