erros com .fail(), criando um spinner na aplicacao, funcao .always()

--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -12,6 +12,11 @@
 		<h1>Alura Typer</h1>
 		<p class="frase" id="frase">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sequi sint maiores voluptate recusandae placeat quo natus odio rem qui!</p>
 
+		<div class="center">
+			<img src="img/spinner.gif" alt="spinner" id="spinner" class="spinner">
+			<p id="erro" class="erro">Ocorreu um erro, por favor tente mais tarde novamente!</p>
+		</div>
+
 		<ul class="informacoes center">
 			<li>
 				<i class="small material-icons icones">description</i>
