permitindo o usuario buscar uma frase especifica, implementando a troca de frase.

--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -30,7 +30,7 @@
 
 		<textarea cols="40" rows="8" class="campo-digitacao" id="campo-digitacao"></textarea>
 	
-		<div>
+		<div class="botoes">
 			<a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
 				<i class="material-icons">restore</i>
 			</a>
@@ -42,6 +42,11 @@
 			<a id="botao-frase" class="btn-floating btn-large waves-light waves-effect blue">
 				<i class="material-icons">shuffle</i>
 			</a>
+
+			<a id="botao-frase-id" class="btn-floating btn-large waves-light waves-effect cyan">
+				<i class="material-icons">repeat_one</i>
+			</a>
+			<input type="number" min="0" id="frase-id" class="frase-id">
 		</div>
 		
 
