--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -47,6 +47,10 @@
 				<i class="material-icons">repeat_one</i>
 			</a>
 			<input type="number" min="0" id="frase-id" class="frase-id">
+
+			<a id="botao-sync" class="btn-floating btn-large waves-effect waves-light orange botao-sync">
+				<i class="material-icons">swap_vert</i>
+			</a>
 		</div>
 		
 
@@ -71,10 +75,10 @@
 					<td>Usuario</td>
 					<td>99</td>
 					<td>
-						<a href="#" class="botao-remover">
+						<a href="#" id="botao-remover" class="botao-remover">
 							<i class="small material-icons">delete</i>
 						</a>
-				</td>
+					</td>
 				</tr>
 			</tbody>
 		</table>
