--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/libs/google-fonts.css">
 	<link rel="stylesheet" href="css/libs/materialize.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/libs/selectize.default.css">
 </head>
 <body>
 	<div class="container">
@@ -47,6 +48,14 @@
 				<i class="material-icons">repeat_one</i>
 			</a>
 			<input type="number" min="0" id="frase-id" class="frase-id">
+			
+			<div class="select-usuarios">
+				<select id="usuarios" class="usuarios">
+					<option value="Douglas">Douglas</option>
+					<option value="Flavio">Flavio</option>
+					<option value="Nico">Nico</option>
+				</select>
+			</div>
 
 			<a id="botao-sync" class="btn-floating btn-large waves-effect waves-light orange botao-sync">
 				<i class="material-icons">swap_vert</i>
@@ -71,7 +80,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
+				<!--<tr>
 					<td>Usuario</td>
 					<td>99</td>
 					<td>
@@ -79,7 +88,7 @@
 							<i class="small material-icons">delete</i>
 						</a>
 					</td>
-				</tr>
+				</tr>-->
 			</tbody>
 		</table>
 
@@ -89,5 +98,6 @@
 	<script src="js/main.js"></script>
 	<script src="js/placar.js"></script>
 	<script src="js/frase.js"></script>
+	<script src="js/selectize.js"></script>
 </body>
 </html>
