--- a/07_jQuery_parte02/aulas/alura-typer/public/principal.html
+++ b/07_jQuery_parte02/aulas/alura-typer/public/principal.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/libs/materialize.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/libs/selectize.default.css">
+	<link rel="stylesheet" href="css/libs/tooltipster.bundle.min.css">
 </head>
 <body>
 	<div class="container">
@@ -57,7 +58,7 @@
 				</select>
 			</div>
 
-			<a id="botao-sync" class="btn-floating btn-large waves-effect waves-light orange botao-sync">
+			<a id="botao-sync" class="btn-floating btn-large waves-effect waves-light orange botao-sync tooltip" title="Sincronizado com sucesso">
 				<i class="material-icons">swap_vert</i>
 			</a>
 		</div>
@@ -99,5 +100,6 @@
 	<script src="js/placar.js"></script>
 	<script src="js/frase.js"></script>
 	<script src="js/selectize.js"></script>
+	<script src="js/tooltipster.bundle.min.js"></script>
 </body>
 </html>
