Tipos imagens/icons fonts para usar, criando um icone tipo hamburguer

--- a/08_Web_Design_Responsivo/aulas/workshop-web-design-responsivo/index.html
+++ b/08_Web_Design_Responsivo/aulas/workshop-web-design-responsivo/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/estilo.css">
 	<link rel="stylesheet" href="css/exercicios.css">
+	<link rel="stylesheet" href="css/icone-hamburguer.css">
 </head>
 <body>
 
@@ -14,7 +15,7 @@
 			
 			<button class="menu-abrir">Abre Menu</button>
 			<h1 class="logo">
-				<img src="img/logo.png" alt="Notícias.com">
+				<img src="img/logo.svg" alt="Notícias.com">
 			</h1>
 
 			<nav class="barra-nav">
