--- a/09_Projeto_Conclusão/index.html
+++ b/09_Projeto_Conclusão/index.html
@@ -4,13 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Alura Conf</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-	<header>
-		<nav>
+	<header class="header">
+		<nav class="main-menu">
 			<ul>
-				<li><a href="#">Sobre</a></li>
-				<li><a href="#">Palestrantes</a></li>
+				<li class="menu-item">
+					<a href="#">Sobre</a>
+				</li>
+				<li class="menu-item">
+					<a href="#">Palestrantes</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
