inserindo e estilizando o button 'inscreva-se'

--- a/09_Projeto_Conclusão/index.html
+++ b/09_Projeto_Conclusão/index.html
@@ -19,6 +19,15 @@
 				</li>
 			</ul>
 		</nav>
+		<div class="jumbotron">
+			<section class="panel-main">
+				<h1 class="title">aluraconf</h1>
+				<h2 class="sub-title">30maio | rio</h2>
+			</section>
+			<section class="panel-subscribe">
+				<a href="#" class="button">Increva-se</a>
+			</section>
+		</div>
 	</header>
 </body>
 </html>
