inserindo e estilizando o campo 'about'

--- a/09_Projeto_Conclusão/index.html
+++ b/09_Projeto_Conclusão/index.html
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Alura Conf</title>
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/about.css">
 </head>
 <body>
 	<header class="header">
@@ -29,5 +31,26 @@
 			</section>
 		</div>
 	</header>
+
+	<main>
+		<section class="panel panel-about">
+			<div class="container">
+				<h2 class="title">Muito conteúdo: do front-end ado back-end</h2>
+				<h3 class="sub-title">30 de Maio de 2020 - na Cidade Maravilhosa</h3>
+			</div>
+			
+			<div class="about-description">
+				<p>
+					Com a AluraConf abordaremos o que há de novidade e conhecimentos essenciais a um desenvolvedor mobile.
+				</p>
+				<p>
+					É uma grande chance de ficar por dentro dos assuntos de Android, iOS, Web mobile, desenvolvimento híbrido, UX, além da
+        parte backend com Rest, Microservices, e BigData. O desenvolvedor atualizado vai estar aqui.
+				</p>
+			</div>
+		</section>
+	</main>
+		
+	
 </body>
 </html>
