trabalhando na area dos palestrantes

--- a/09_Projeto_Conclusão/index.html
+++ b/09_Projeto_Conclusão/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/about.css">
+	<link rel="stylesheet" href="css/speakers.css">
 </head>
 <body>
 	<header class="header">
@@ -38,7 +39,7 @@
 				<h2 class="title">Muito conteúdo: do front-end ado back-end</h2>
 				<h3 class="sub-title">30 de Maio de 2020 - na Cidade Maravilhosa</h3>
 			</div>
-			
+
 			<div class="about-description">
 				<p>
 					Com a AluraConf abordaremos o que há de novidade e conhecimentos essenciais a um desenvolvedor mobile.
@@ -48,6 +49,95 @@
         parte backend com Rest, Microservices, e BigData. O desenvolvedor atualizado vai estar aqui.
 				</p>
 			</div>
+		</section>
+
+		<section class="panel panel-speakers">
+			<div class="container">
+				<h2 class="title">PALESTRANTES</h2>
+				<h3 class="sub-title">
+					Aprenda com palestrantes que são referências na comunidade
+				</h3>
+			</div>
+			
+			<ul class="speakers">
+				<li class="speaker">
+					<figure class="speaker-portrait">
+						<img src="img/img-flavio.jpeg" alt="foto do palestrante" class="speaker-image">
+						<figcaption class="speaker-name">
+							Flávio Almeida
+						</figcaption>
+
+						<p class="speaker-bio">
+							Flávio é desenvolvedor e instrutor, focado no desenvolvimento com Angular e procurando conciliar o frontend com o backend.
+						</p>
+					</figure>
+				</li>
+
+				<li class="speaker">
+					<figure class="speaker-portrait">
+						<img src="img/img-sergio.jpeg" alt="foto do palestrante" class="speaker-image">
+						<figcaption class="speaker-name">
+							Sérgio Lopes
+						</figcaption>
+
+						<p class="speaker-bio">
+							Sérgio é diretor e líder do time de diversos times no Grupo Caelum, formado em Ciência da Computação pela USP.
+						</p>
+					</figure>
+				</li>
+
+				<li class="speaker">
+					<figure class="speaker-portrait">
+						<img src="img/img-nico.jpeg" alt="foto do palestrante" class="speaker-image">
+						<figcaption class="speaker-name">
+							Nico Steppat
+						</figcaption>
+
+						<p class="speaker-bio">
+							Nico trabalha na área de tecnologia há mais de 20 anos e atuou como desenvolvedor e instrutor no Brasil e na Alemanha.
+						</p>
+					</figure>
+				</li>
+
+				<li class="speaker">
+					<figure class="speaker-portrait">
+						<img src="img/img-gabriel.jpeg" alt="foto do palestrante" class="speaker-image">
+						<figcaption class="speaker-name">
+							Gabriel Leite
+						</figcaption>
+
+						<p class="speaker-bio">
+							Gabriel é desenvolvedor e instrutor com foco em Java, Ionic e Node.js.
+						</p>
+					</figure>
+				</li>
+
+				<li class="speaker">
+					<figure class="speaker-portrait">
+						<img src="img/img-guilherme.jpeg" alt="foto do palestrante" class="speaker-image">
+						<figcaption class="speaker-name">
+							Guilherme Silveira
+						</figcaption>
+
+						<p class="speaker-bio">
+							Guilherme co-fundou a Caelum, a Alura e o GUJ.
+						</p>
+					</figure>
+				</li>
+
+				<li class="speaker">
+					<figure class="speaker-portrait">
+						<img src="img/img-paulo.jpeg" alt="foto do palestrante" class="speaker-image">
+						<figcaption class="speaker-name">
+							Paulo Silveira
+						</figcaption>
+
+						<p class="speaker-bio">
+							Paulo é CEO da Caelum, reconhecido na comunidade de desenvolvedores, tendo participado de projetos no IBOPE e dentro da Caelum.
+						</p>
+					</figure>
+				</li>
+			</ul>
 		</section>
 	</main>
 		
