inserindo e estilizando um formulario

--- a/09_Projeto_Conclusão/index.html
+++ b/09_Projeto_Conclusão/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/about.css">
 	<link rel="stylesheet" href="css/speakers.css">
+	<link rel="stylesheet" href="css/form.css">
 </head>
 <body>
 	<header class="header">
@@ -58,7 +59,7 @@
 					Aprenda com palestrantes que são referências na comunidade
 				</h3>
 			</div>
-			
+
 			<ul class="speakers">
 				<li class="speaker">
 					<figure class="speaker-portrait">
@@ -141,6 +142,23 @@
 		</section>
 	</main>
 		
-	
+	<section class="panel-form">
+		<div class="container">
+			<h2 class="title">Seus dados</h2>
+			<form>
+				<div class="field">
+					<label>Nome</label>
+					<input type="text">
+				</div>
+				<div class="field">
+					<label>E-mail</label>
+					<input type="email">
+				</div>
+				<div class="button-place">
+					<button class="button">realizar inscrição</button>
+				</div>
+			</form>
+		</div>
+	</section>
 </body>
 </html>
