--- a/09_Projeto_Conclusão/index.html
+++ b/09_Projeto_Conclusão/index.html
@@ -16,10 +16,10 @@
 		<nav class="main-menu">
 			<ul>
 				<li class="menu-item">
-					<a href="#">Sobre</a>
+					<a href="#panel-about">Sobre</a>
 				</li>
 				<li class="menu-item">
-					<a href="#">Palestrantes</a>
+					<a href="#panel-speakers">Palestrantes</a>
 				</li>
 			</ul>
 		</nav>
@@ -29,13 +29,13 @@
 				<h2 class="sub-title">30maio | rio</h2>
 			</section>
 			<section class="panel-subscribe">
-				<a href="#" class="button">Increva-se</a>
+				<a href="#panel-form" class="button">Increva-se</a>
 			</section>
 		</div>
 	</header>
 
 	<main>
-		<section class="panel panel-about">
+		<section class="panel panel-about" id="panel-about">
 			<div class="container">
 				<h2 class="title">Muito conteúdo: do front-end ado back-end</h2>
 				<h3 class="sub-title">30 de Maio de 2020 - na Cidade Maravilhosa</h3>
@@ -52,7 +52,7 @@
 			</div>
 		</section>
 
-		<section class="panel panel-speakers">
+		<section class="panel panel-speakers" id="panel-speakers">
 			<div class="container">
 				<h2 class="title">PALESTRANTES</h2>
 				<h3 class="sub-title">
@@ -142,7 +142,7 @@
 		</section>
 	</main>
 		
-	<section class="panel-form">
+	<section class="panel-form" id="panel-form">
 		<div class="container">
 			<h2 class="title">Seus dados</h2>
 			<form>
@@ -160,5 +160,8 @@
 			</form>
 		</div>
 	</section>
+
+	<script src="js/jquery.js"></script>
+	<script src="js/scroll.js"></script>
 </body>
 </html>
